# Kyle_Capstone_Project

./: .gitignore  Kyle_Capstone_Project.code-workspace  README.md  addenemies.py  backup.py  constants.py  enemy.py  entities.py  entities_copy.py  idk.py  junk.py  main.py  makemoreoop.py  new1.0.py  new1.1.py  new_views.py  newentities.py  newest.py  newfile.py  newmain.py  platformer.py  platformerforest.tmx  platformmain.py  pyproject.toml  requirements.txt  test_game.py  testnpc.py  views.py
arcade_platformer/: constants.py  main.py  pymunkplat.py  tilemap.py
assets/images/: constants.py  instructions screen.xcf  level_01.json  level_01.tmj  level_01.tmx  platformerPack_industrial_tilesheet.tsx  spritesheet_ground.tsx  spritesheet_items.tsx
assets/maps/: level_1.json  level_2.json  level_3.json  level_4.json  platformIndustrial_001.tsx  platformIndustrial_002.tsx  platformIndustrial_003.tsx  platformerPack_industrial_vector.tsx  spritesheet_ground.tsx  spritesheet_items.tsx  spritesheet_tiles.tsx
maps/: desktop.ini
rpg_game/: .gitignore  animations.py  backupmain.py  character.py  game_map.py  main.py  testmap.tmj
rpg_game/assets/: MainLev2.0.tsx
rpg_game/assets/maps/: Decorative.tsx  LedA.tsx  LedC.tsx  MainLev.tsx  MainLev2.0.tsx  New_Map.tmx  ancientforest.tsx  decorative.tsx  furnitures.tsx  houses_interriors.tsx  houses_outside.tsx  houses_outside_shadows.tsx  light1B.tsx  newmainlev.tsx  platformerforest.tmx  sheet.tsx  testmap.tmj  testmap.tmx  untitled.tmx
