[tool.poetry]
name = "kyle-capstone-project-1"
version = "0.1.0"
description = "A capstone project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
arcade = "^2.5.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
